
add_subdirectory(global)
add_subdirectory(ui)
add_subdirectory(uicomponents)
add_subdirectory(fonts)
add_subdirectory(actions)
add_subdirectory(shortcuts)
add_subdirectory(workspace)
add_subdirectory(network)
add_subdirectory(system)
add_subdirectory(audio)
add_subdirectory(midi)
add_subdirectory(midi_old)

if (BUILD_TELEMETRY_MODULE)
      add_subdirectory(telemetry)
      add_subdirectory(../thirdparty/google_analytics google_analytics)
endif (BUILD_TELEMETRY_MODULE)

if (BUILD_UNIT_TESTS)
    add_subdirectory(global/tests)
    add_subdirectory(system/tests)
endif(BUILD_UNIT_TESTS)

if (BUILD_VST)
    add_subdirectory(vst)
endif(BUILD_VST)
